[bdist_wheel]
universal = 1

[metadata]
name = dvdpack
version = attr: dvdpack.__version__
description = Solve knapsack problem for your video life
long_description = file:README.md
license = MIT
author = shidocchi
author_email = shidocchi@gmail.com
url = https://github.com/shidocchi/dvdpack
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
py_modules = dvdpack
install_requires =
    ortoolpy
